[package]
name = "narrowlink-custom-dependencies"
version = "0.0.1"
authors = ["Various"]

edition = "2021"
license = "MIT"
description = "This crate provides temporary indexing for customized Rust libraries to be used in Narrowlink"
repository = "https://github.com/narrowlink/narrowlink-custom-dependencies"
readme = "README.md"
keywords = [""]

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "fs", "io-util", "sync"] }
futures = "0.3.29"
async-stream = "0.3.5"


[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.13.1"
netlink-sys = "0.8.5"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.17.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = [
    "netioapi",
    "winerror",
    "ws2def",
    "ifdef"
] }

[build-dependencies]
bindgen = "0.69.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread"] }
